<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blur"
            android:cursorVisible="false"
            android:ellipsize="end"
            android:fontFamily="sans-serif-light"
            android:gravity="top"
            android:hint="@string/title_hint"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:padding="4dp"
            android:scrollHorizontally="true"
            android:scrollbars="vertical"
            android:textColor="@color/text"
            android:textSize="28sp"
            android:visibility="gone" />


        <EditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@null"
            android:cursorVisible="false"
            android:fontFamily="sans-serif-light"
            android:gravity="top"
            android:hint="@string/text_hint"
            android:padding="4dp"
            android:scrollbars="vertical"
            android:textColor="@color/text"
            android:textSize="26sp" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/place_layout"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:focusable="true"
            android:gravity="center_vertical"
            android:clickable="true"
            android:onClick="placeButton"
            android:focusableInTouchMode="true"
            android:orientation="horizontal"
            android:background="@color/blur"
            android:visibility="gone" >

            <ImageView
                android:id="@+id/place_arrow"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                app:srcCompat="@drawable/ic_location" />

            <TextView
                android:id="@+id/place_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-light"
                android:gravity="center_vertical"
                android:text="@string/place_searching"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/photo_layout"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@color/blur"
            android:orientation="horizontal"
            android:visibility="gone" >

            <ImageButton
                android:id="@+id/camera_button"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:adjustViewBounds="false"
                android:background="@color/action_bar"
                android:elevation="0dp"
                app:srcCompat="@drawable/ic_action_camera" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/photo_list"
                android:scrollbars="horizontal"
                android:layout_width="match_parent"
                android:layout_height="120dp"/>


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>